added d dimensional tube

--- a/Escaping Saddle Points 1D.ipynb
+++ b/Escaping Saddle Points 1D.ipynb
@@ -1742,14 +1742,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "here momentum seems to help with the later saddles especially which is not suprising since the"
+    "here momentum seems to help with the later saddles especially which is not suprising since the momentum term always helps into the negative eigendirections ... This hints towards momentum helping for functions that have somehow positively correlated negative eigendirections "
    ]
   },
   {
@@ -1762,7 +1758,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " def compute_loss(w):\n",
