--- a/Escaping D Saddle Points.ipynb
+++ b/Escaping D Saddle Points.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "step_size=0.25\n",
+    "beta=0.25\n",
+    "L=1\n",
+    "gamma=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -825,7 +839,6 @@
     "no_of_runs=1\n",
     "iterations=1000\n",
     "accuracy=1e-10\n",
-    "step_size=0.25\n",
     "global loss_type\n",
     "loss_type='tube'\n",
     "\n",
@@ -839,7 +852,6 @@
     "GD=True\n",
     "PGD=False\n",
     "AGD=True\n",
-    "AGD2=False\n",
     "PAGD=False\n",
     "Momentum=False\n",
     "\n",
@@ -867,7 +879,7 @@
     "    loss_collector=[]\n",
     "    x_collector=[]\n",
     "    for k in range(no_of_runs):\n",
-    "        (AGD_steps,_x,_loss)= Accelerated_Gradient_Descent(w_0,iterations,step_size,accuracy)\n",
+    "        (AGD_steps,_x,_loss)= Accelerated_Gradient_Descent(w_0,iterations,step_size,accuracy,beta)\n",
     "        loss_collector.append(_loss)\n",
     "        x_collector.append(_x)\n",
     "    AGD_loss = [float(sum(col))/len(col) for col in zip(*loss_collector)]\n",
@@ -958,8 +970,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Function value computations dependent on domain\n",
@@ -1005,7 +1019,7 @@
     "    else:\n",
     "        return np.concatenate([g_prime(w,L,gamma,tau,v,index,d,y,y_prime),2*L*w[index+2:d]]) #throws error in 2d since index+2>d\n",
     "\n",
-    "def f_i_1_prime(mirrw,L,gamma,tau,v,index,d):\n",
+    "def f_i_1_prime(w,L,gamma,tau,v,index,d):\n",
     "    return np.concatenate([2*L*(w[0:index]-4*tau),np.array([-2*gamma*w[index]]),2*L*w[index+1:d]])\n",
     "\n",
     "def f_i_2_prime(w,L,gamma,tau,v,index,d):\n",
@@ -1144,7 +1158,16 @@
     "            else:\n",
     "                grad=f_i_1_prime(w,L,gamma,tau,v,index,d)\n",
     "    return grad\n",
-    "\n"
+    "\n",
+    "def make_plot(list_loss,list_x,list_methods,list_steps,limits):\n",
+    "    colors = ['#42A5F5', '#FFB300', '#BA68C8','#7CB342']\n",
+    "\n",
+    " #2. Plot performance over time/steps\n",
+    "    plt.figure(1)\n",
+    "\n",
+    "    for i in range(len(list_loss)):\n",
+    "        plt.plot(list_x[i], list_loss[i],color= colors[i])\n",
+    "    plt.legend(list_methods,fontsize=12, loc=1)"
    ]
   },
   {
@@ -1156,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -1227,7 +1250,7 @@
     "    return(iterates,x,loss)\n",
     "\n",
     "#Run AGD\n",
-    "def Accelerated_Gradient_Descent(w,iterations,step_size, accuracy):\n",
+    "def Accelerated_Gradient_Descent(w,iterations,step_size, accuracy,beta):\n",
     "    iterates=[]\n",
     "    loss=[]\n",
     "    x=[]\n",
@@ -1240,7 +1263,7 @@
     "        loss.append(compute_loss(w))\n",
     "        \n",
     "        #compute y_(k)\n",
-    "        y=w+0.25*(w-w_old)\n",
+    "        y=w+beta*(w-w_old)\n",
     "        if loss_type=='tube':\n",
     "            if y[1]<0:\n",
     "                y[1]=-y[1]\n",
