--- a/Bukin.ipynb
+++ b/Bukin.ipynb
@@ -20,17 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We here minimize the quadratic $$f(x,y)=x^2+5y^2$$ which has Eigenspace $v_1=(0,1)$ and $v_2=(1,0)$ with eigenvalues $\\lambda_1=10$ and $\\lambda_2=2$. \n",
+    "We here minimize the non-convex objective known as Bukins 6th function\n",
     "\n",
-    "Thus the $\\textit{locally}$ optimal step size for $\\textbf{GD}$ is $\\alpha_1=1/10$ while the $\\textit{globally}$ optimal step size is $\\alpha_2=2/(10+2)=1/6$. The problem with the greedy step size $\\alpha_1$ is that it exploits eigendirections of small eigenvalues such as $v_2$ very slowly (since the gradient has a small component along them), while it minimizes the first dimension $v_1$ within 1 step. Therefore, $\\alpha_2$ is tied towards minimizing the distance $x_k-x^*$ in all dimensions equally well in dimensions.\n",
-    "\n",
-    "Ideally, you would rescale $\\textit{each}$ dimension of the gradient $\\textit{seperatly}$ by $1/\\lambda_i$ which is exactly what $\\textbf{Newton's Method}$ does.\n",
-    "\n",
-    "For $\\textbf{AGD}$ the optimal step-size is $\\alpha= 1/10$ and the optimal momentum parameter $\\beta=(\\sqrt{\\kappa}-1)/(\\sqrt{\\kappa}+1))$ with $\\kappa=10/2$.\n",
-    "\n",
-    "In general momentum buys us progress in directions to $x^*$ that have low gradient component at the cost of a) not exploiting large components optimally in each step b) maybe even ascending. \n",
-    "\n",
-    "Here this comes for free since the first step already optimizes one dimension fully and then we simply exploit the low (positive) curvature direction on the bottom of the valley faster. "
+    "$$f(x,y)=100*\\sqrt{|x_2-0.01x_1^2|} + 0.01 |x_1+10|$$"
    ]
   },
   {
